# rules_purescript

./: README.md  WORKSPACE  shell.nix
nix/: nixpkgs.nix  purescript-packages.nix
nixpkgs/: default.nix
purescript/: BUILD.bazel  compile.bzl  context.bzl  nixpkgs.bzl  purescript.bzl  repl.sh  repositories.bzl  toolchain.bzl
purescript/nix/: default.nix
tests/: BUILD.bazel
tests/bundle-dependencies/: BUILD.bazel
tests/bundle-dependencies/dep1/: Dep1.purs
tests/bundle-dependencies/dep2/: Dep2.js  Dep2.purs
tests/bundle-dependencies/main/: Main.purs
tests/bundle-main/: BUILD.bazel  Main.purs
tests/bundle-simple/: BUILD.bazel  Main.purs
tests/library-dependencies/: BUILD.bazel  LibDeps.purs
tests/library-dependencies/LibDeps/: Other.purs
tests/library-foreign/: BUILD.bazel
tests/library-foreign/src/: LibForeign.js  LibForeign.purs
tests/library-foreign/src-other/: LibForeignOther.js  LibForeignOther.purs
tests/library-prefix/: BUILD.bazel
tests/library-prefix/src/: LibPrefix.purs
tests/library-simple/: BUILD.bazel  Lib.purs  LibSimple.purs
tests/library-transitive/: BUILD.bazel
tests/library-transitive/src/: LibTrans.purs
tests/library-transitive/src-other/: LibTransOther.purs
