package(default_testonly = 1)

load(
    "@bazel_tools//tools/build_rules:test_rules.bzl",
    "rule_test",
)

load(
    "@com_habito_rules_purescript//purescript:purescript.bzl",
    "purescript_library",
    "purescript_toolchain",
)

purescript_toolchain(
    name = "purescript",
    version = "0.12.1",
    tools = [
        "@purescript//:bin",
        "@rsync//:bin",
        "@tar//:bin",
    ],
)

rule_test(
    name = "test-library-simple",
    size = "small",
    generates = ["library-simple.purs-package"],
    rule = "//tests/library-simple",
)

rule_test(
    name = "test-library-dependencies",
    size = "small",
    generates = ["library-dependencies.purs-package"],
    rule = "//tests/library-dependencies",
)
