package(default_testonly = 1)

load(
    "@bazel_tools//tools/build_rules:test_rules.bzl",
    "rule_test",
)

load(
    "@com_habito_rules_purescript//purescript:purescript.bzl",
    "purescript_toolchain",
)

purescript_toolchain(
    name = "purescript",
    version = "0.12.1",
    tools = [
        "@purescript//:bin",
        "@tar//:bin",
    ],
)

rule_test(
    name = "test-library-simple",
    size = "small",
    generates = ["library-simple.purs-package"],
    rule = "//tests/library-simple",
)

rule_test(
    name = "test-library-dependencies",
    size = "small",
    generates = ["library-dependencies.purs-package"],
    rule = "//tests/library-dependencies",
)

rule_test(
    name = "test-library-prefix",
    size = "small",
    generates = ["library-prefix.purs-package"],
    rule = "//tests/library-prefix",
)

rule_test(
    name = "test-library-transitive",
    size = "small",
    generates = ["library-transitive.purs-package"],
    rule = "//tests/library-transitive",
)

rule_test(
    name = "test-library-foreign",
    size = "small",
    generates = ["library-foreign.purs-package"],
    rule = "//tests/library-foreign",
)

rule_test(
    name = "test-bundle-simple",
    size = "small",
    generates = ["bundle-simple.js"],
    rule = "//tests/bundle-simple",
)

rule_test(
    name = "test-bundle-main",
    size = "small",
    generates = ["bundle-main.js"],
    rule = "//tests/bundle-main",
)
