package(default_testonly = 1)

load(
    "@com_habito_rules_purescript//purescript:purescript.bzl",
    "purescript_bundle",
)

purescript_bundle(
    name = "bundle-main",
    entry_point_module = "Main",
    main_module = "Main",
    srcs = [
        "Main.purs",
    ],
    deps = [
        "@psc-package//:prelude",
    ],
    visibility = ["//visibility:public"],
)
